Resolve display fix